@@ -7,8 +7,10 @@ and this project adheres to http://semver.org/[Semantic Versioning].
 
 === [UNRELEASED]
 ==== Added
-* Added `bytes_to_read()`, `bytes_to_write()`, and `clear()` to `SerialPort`. 
+* Added `bytes_to_read()`, `bytes_to_write()`, and `clear()` to `SerialPort`.
   Also added example scripts for using them.
+* Added Tier 2 support for:
+  * `armv5te-unknown-linux-musleabi`
 
 ==== Changed
 
